Got livereload working with Jekyll build

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/assets/css/all.css">
 
     </head>
     <body>
@@ -26,9 +26,9 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                Whoami<br />
+                What I am<br />
+                Where I can be contacted
               </p>
             </div>
             <div class="contact">
@@ -39,6 +39,6 @@
             </div>
           </div>
         </div>
-
+        <script src="/assets/js/all.js" type="text/javascript"></script>
     </body>
 </html>
