--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,10 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/assets/css/all.css">
+        <!-- inject:css -->
+        <!-- endinject -->
+
+        <!-- <link rel="stylesheet" href="/assets/css/all.css"> -->
 
     </head>
     <body>
@@ -39,6 +42,11 @@
             </div>
           </div>
         </div>
-        <script src="/assets/js/all.js" type="text/javascript"></script>
+        <!-- <script src="/assets/js/all.js" type="text/javascript"></script> -->
+
+        <!-- Will inject JS here w/revision -->
+        <!-- inject:js -->
+        <script src="assets/js/all.min-b9f01c33.js"></script>
+        <!-- endinject -->
     </body>
 </html>
