asset revision fixed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 
         <!-- Custom CSS -->
         <!-- inject:css -->
+        <link rel="stylesheet" href="assets/css/all.css">
         <!-- endinject -->
 
         <!-- <link rel="stylesheet" href="/assets/css/all.css"> -->
