concat js files with jquery as first dependency

--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -135,7 +135,7 @@
 
     <!-- Custom Theme JavaScript -->
     <!-- <script src="js/grayscale.js"></script>-->
-    <script src="js/all.js" charset="utf-8"></script>
+    <script src="assets/js/all.js" charset="utf-8"></script>
 
 </body>
 
