--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -45,15 +45,9 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#download">Download</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li>
+                    {% assign pages_list = site.pages %}
+                    {% assign group = 'navigation' %}
+                    {% include JB/pages_list %}
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -82,14 +76,12 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a premium quality, free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, all you need to do is download the template on the preview page. You can use this template for any purpose, personal or commercial.</p>
-                <p>This striking, black and white theme features stock photographs by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Map skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>With this template, just the slightest splash of color can make a huge impact on the overall presentation and design.</p>
+                {{ content }}
             </div>
         </div>
     </section>
 
+    <!--
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
@@ -101,7 +93,9 @@
             </div>
         </div>
     </section>
+    -->
 
+    <!--
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -119,6 +113,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- <div id="map"></div> -->
 
@@ -136,6 +131,8 @@
     <!-- Custom Theme JavaScript -->
     <!-- <script src="js/grayscale.js"></script>-->
     <script src="assets/js/all.js" charset="utf-8"></script>
+
+    {% include JB/analytics %}
 
 </body>
 
