--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -1,9 +1,9 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-color: #000;
+    font-family: Merriweather,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #111;
+    background-color: #fff;
 }
 
 html {
