--- a/_includes/themes/grayscale/post.html
+++ b/_includes/themes/grayscale/post.html
@@ -5,11 +5,13 @@
 <div class="row-fluid post-full">
   <div class="span12">
     <div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
+      <span>{{ page.date | date_to_long_string }} - <small class="reading-time">reading time...</small></span>
     </div>
-    <div class="content">
+    <article class="content post" id="{{page.id}}">
       {{ content }}
-    </div>
+    </article>
+
+
 
   {% unless page.categories == empty %}
     <ul class="tag_box inline">
