--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -127,13 +127,22 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    // background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    // background-color: #000;
+    // -webkit-background-size: cover;
+    // -moz-background-size: cover;
+    // background-size: cover;
+    // -o-background-size: cover;
+
+    video#bgvid {
+        position: absolute; right: 0; bottom: 0;
+        min-width: 100%; min-height: 100%;
+        width: auto; height: auto; z-index: -100;
+        background: url(polina.jpg) no-repeat;
+        background-size: cover;
+    }
 }
+
 
 .intro-body {
     display: table-cell;
@@ -261,7 +270,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
 
     .download-section {
