--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -69,7 +69,7 @@
                         <h1 class="brand-heading">{{ site.title }}</h1>
                         <p class="intro-text">{{site.tagline}}</p>
                         <div class="page-scroll">
-                            <a href="#about" class="btn btn-circle ">
+                            <a href="#posts_list" class="btn btn-circle ">
                                 <i class="fa fa-angle-double-down animated"></i>
                             </a>
                         </div>
@@ -80,14 +80,14 @@
     </section>
     {% endif %}
 
-    <section id="about" class="container content-section">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+    <section id="posts_list" class="container content-section">
+        <section class="row">
+            <article class="col-lg-8 col-lg-offset-2">
 
                 {{ content }}
 
-            </div>
-        </div>
+            </article>
+        </section>
     </section>
 
     <!--
@@ -104,19 +104,19 @@
     </section>
     -->
 
-    <
+
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
+                <h2>Why not say hello?</h2>
                 <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p>feedback@startbootstrap.com</p>
+                <p>{{site.author.email}}</p>
                 <ul class="list-inline banner-social-buttons">
-                    <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    <li><a href="https://twitter.com/{{site.author.twitter}}" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
-                    <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    <li><a href="http://github.com/{{site.author.github}}" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
-                    <li><a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                    <li><a href="https://plus.google.com/+{{site.author.googleplus}}/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
                 </ul>
             </div>
