--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Merriweather,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Merriweather,"Baskerville","Calibri",serif;
     color: #111;
     background-color: #fff;
 }
@@ -356,3 +356,6 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+
+
