added config for webmastertools

--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="https://plus.google.com/+{{site.author.googleplus}}">
+    <meta name="google-site-verification" content="{{site.webmastertools.verification_code}}" />
 
     <title>{{site.title}}</title>
 
