--- a/_includes/themes/grayscale/post.html
+++ b/_includes/themes/grayscale/post.html
@@ -3,7 +3,24 @@
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
   <div class="post-date">
-    <span>{{ page.date | date_to_long_string }} - <small class="reading-time eta">calculating reading time...</small></span>
+    {{ page.date | date_to_long_string }} - <small class="reading-time eta">calculating reading time...</small> -
+    <span class="share">
+      <a href="http://twitter.com/home?status={{page.description | uri_escape}}%20{{site.production_url}}{{page.url | uri_escape}}" title="Share with twitter">
+          <i class="fa fa-twitter"></i>
+      </a>
+      <a href="https://www.facebook.com/sharer/sharer.php?u={{site.production_url}}{{page.url | uri_escape}}" title="Share with facebook">
+          <i class="fa fa-facebook"></i>
+      </a>
+      <a href="https://plus.google.com/share?url={{page.description | uri_escape}}%20{{site.production_url}}{{page.url | uri_escape}}" title="Share on pinterest">
+          <i class="fa fa-google-plus"></i>
+      </a>
+      <a href="http://pinterest.com/pin/create/button/?url={{site.production_url | uri_escape }}{{page.url | uri_escape}}&media={{site.production_url | uri_escape }}/assets/img/avatar_200x200.jpg&{{page.description | uri_escape}}" title="Share on pinterest">
+          <i class="fa fa-pinterest"></i>
+      </a>
+      <a href="{{site.JB.rss_path}}" title="Rss feed">
+          <i class="fa fa-rss"></i>
+      </a>
+    </span>
   </div>
 </div>
 
@@ -12,8 +29,6 @@
     <div class="content" id="{{page.id}}">
       {{ content }}
     </div>
-
-
 
   {% unless page.categories == empty %}
     <ul class="tag_box inline">
