--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: Merriweather,"Baskerville","Calibri",serif;
-    color: #111;
+    color: $darkgreytext;
     background-color: #fff;
 }
 
@@ -138,7 +138,7 @@ a:focus {
         position: absolute; right: 0; bottom: 0;
         min-width: 100%; min-height: 100%;
         width: auto; height: auto; z-index: -100;
-        background: url(polina.jpg) no-repeat;
+        background: url(/assets/img/bgclip.jpg) no-repeat;
         background-size: cover;
     }
 }
@@ -192,6 +192,32 @@ a:focus {
     outline: 0;
     color: #fff;
     background: rgba(255,255,255,.1);
+}
+
+.btn-circle-small {
+    @extend .btn-circle;
+    width: 40px;
+    height:40px;
+    padding: 1px 5px;
+    border-color: $darkgreytext;
+    font-size: 24px;
+
+}
+
+.btn-circle-small:hover, btn-circle-dark:hover,
+.btn-circle-dark:focus, .btn-circle-small:focus {
+    color:$lightgreentext;
+}
+
+.btn-circle-dark {
+    color: $darkgreytext;
+
+}
+
+btn-circle-dark:hover,
+.btn-circle-dark:focus {
+    @extend .btn-circle:hover;
+    color:$lightgreentext;
 }
 
 .page-scroll .btn-circle i.animated {
@@ -332,17 +358,17 @@ a:focus {
         margin-bottom: 0;
     }
 }
-
+// text Selection settings
 ::-moz-selection {
     text-shadow: none;
-    background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background:$lightgreentext;
+    background:lighten($lightgreentext, 35%);
 }
 
 ::selection {
     text-shadow: none;
-    background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background:$lightgreentext;
+    background: lighten($lightgreentext, 35%);
 }
 
 img::selection {
