--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,8 +1,12 @@
 // Global vars
 
 // Colors
+$darkgreytext: #111;
 $lightgreytext: #ccc;
 $lightgreentext: #28c3ab;
+$lightgreentext_rgba: rgba(40,195,171,.2);
 
+@import 'compass';
 @import 'theme';
+@import 'components';
 @import 'posts';
