Fixed go to top btn with fade

--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -13,7 +13,8 @@
 
     <link rel="alternate" type="application/rss+xml" title="{{site.author.name}}: {{site.feed_description}} » Feed" href="{{site.production_url}}{{site.JB.rss_path}}" />
 
-    <!-- Social -->
+    <!-- Social  -->
+    <!-- Hmm do I want on all -->
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Thoughts on Google Instant" />
     <meta property="og:url" content="http://www.mattcutts.com/blog/thoughts-on-google-instant/" />
