--- a/_includes/themes/grayscale/post.html
+++ b/_includes/themes/grayscale/post.html
@@ -1,4 +1,4 @@
-<article class="post" data-words="{{ content | number_of_words}}">
+<article class="post post-single" data-words="{{ content | number_of_words}}">
 
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
