--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -383,5 +383,9 @@ body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
-
+.hide-transition {
+    opacity:0;
+    @include transition-property(opacity);
+    @include transition-duration(3s);
+}
 
