--- a/_includes/themes/grayscale/page.html
+++ b/_includes/themes/grayscale/page.html
@@ -1,8 +1,8 @@
-{% if page.url != "/index.html" %}
+{%unless page.intro.title == null or page.url == "/index.html" %}
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
-{% endif %}
+{% endunless %}
 
 <div class="row-fluid">
   <div class="span12">
