--- a/src/sass/_posts.scss
+++ b/src/sass/_posts.scss
@@ -10,6 +10,10 @@ ul.posts{
       padding-bottom: $post-spacing;
       margin-bottom: $post-spacing;
   }
+
+  li:last-of-type {
+    border-bottom-width: 0
+  }
 }
 
 .post-date {
