--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Merriweather,"Baskerville","Calibri",serif;
+    font-family: $fontserif;
     color: $darkgreytext;
     background-color: #fff;
 }
@@ -29,6 +29,29 @@ p {
     font-size: 18px;
     line-height: 1.5;
 }
+.has-error {
+    .form-control {
+        border-color: darken($errortext,8);
+    }
+    .with-errors {
+        font-family: $fontsans;
+        text-transform: uppercase;
+        font-weight: 700;
+        color:lighten($lightgreentext,5);
+
+    }
+}
+
+.form-control:focus {
+    border-color: $lightgreentext;
+}
+
+
+// .has-error {
+//     .form-control {
+//         border-color: $errorred;
+//     }
+// }
 
 @media(min-width:767px) {
     p {
@@ -164,11 +187,17 @@ a:focus {
     }
 
     .brand-heading {
-        font-size: 100px;
+        font-size: 80px;
     }
 
     .intro-text {
         font-size: 25px;
+    }
+}
+
+@media(min-width:1199px) {
+    .brand-heading {
+        font-size: 100px;
     }
 }
 
@@ -292,6 +321,30 @@ btn-circle-dark:hover,
     width: 100%;
     height: 200px;
     margin-top: 100px;
+}
+
+.contact_form {
+    background-color: darken($lightgreentext, 10);
+    color: #ffffff;
+    margin-bottom: 0;
+
+    input, textarea, select {
+        border:4px solid #bbbbbb;
+        border-radius: 0;
+    }
+
+    label {
+        display:none;
+    }
+}
+.copyright {
+    color:$lightgreytext;
+    font-family: $fontsans;
+    font-weight: 100;
+    text-transform: uppercase;
+    background-color: lighten($darkgreytext,10);
+    margin-bottom: 0;
+    padding-top: 40px;
 }
 
 @media(min-width:767px) {
