--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,10 +1,15 @@
 // Global vars
 
+// Fontstacks
+$fontsans  : Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+$fontserif : Merriweather,"Baskerville","Calibri",serif;
+
 // Colors
 $darkgreytext: #111;
 $lightgreytext: #ccc;
 $lightgreentext: #28c3ab;
 $lightgreentext_rgba: rgba(40,195,171,.2);
+$errortext: #c32836;
 
 @import 'compass';
 @import 'theme';
