Fixed breadcrumbs and tags

--- a/_includes/themes/grayscale/contact_form.html
+++ b/_includes/themes/grayscale/contact_form.html
@@ -9,7 +9,7 @@
     <input type='hidden' name='redirect_to' value='{{site.production_url}}/thank-you.html'>
     <input type="hidden" name="rationale" value="none">
     <div class="form-group col-xs-12 col-lg-6 col-md-6">
-      <label for="userFullName">Name</label>
+      <label for="userFullName" class="sr-only">Name</label>
       <input class="form-control input-lg"
         id="userFullName"
         name="fullname"
@@ -20,7 +20,7 @@
 
     </div>
     <div class="form-group col-xs-12 col-lg-6 col-md-6">
-      <label for="userEmail">Email address</label>
+      <label for="userEmail" class="sr-only">Email address</label>
       <input type="email"
         class="form-control input-lg"
         id="userEmail"
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="userMessage">Message</label>
+    <label for="userMessage" class="sr-only">Message</label>
     <textarea name="message" class="form-control input-lg" id="userMessage" placeholder="Your message"></textarea>
   </div>
 
