--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -59,7 +59,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="{% if page.url == '/index.html' %}#page-top{% else %}/{% endif %}">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Test</span> Site
+                    <i class="fa fa-play-circle"></i>  <span class="light">John</span> Moxon
                 </a>
             </div>
 
@@ -73,6 +73,7 @@
                     {% assign pages_list = site.pages %}
                     {% assign group = 'navigation' %}
                     {% include JB/pages_list %}
+                    <li class="page-scroll"><a href="#contact">contact</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -108,6 +109,9 @@
     <section id="content" class="container content-section">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+                {% unless page.url == '/index.html' %}
+                {% include themes/grayscale/components/breadcrumb %}
+                {% endunless %}
 
                 {{ content }}
 
@@ -115,7 +119,7 @@
         </div>
     </section>
 
-    <section id="contact" class="jumbotron content-section contact_form">
+    <section id="contact" class="jumbotron contact-form">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Why not say hello?</h2>
