--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -143,7 +143,7 @@
                     </li>
                     <li><a href="https://plus.google.com/+{{site.author.googleplus}}/posts" class="" title="Google+"><i class="fa fa-google-plus fa-fw fa-4x"></i></a>
                     </li>
-                    <li><a href="https://plus.google.com/+{{site.author.googleplus}}/posts" class="" title="LinkedIn"><i class="fa fa-linkedin fa-fw fa-4x"></i></a>
+                    <li><a href="au.linkedin.com/in/{{site.author.linkedin}}" class="" title="LinkedIn"><i class="fa fa-linkedin fa-fw fa-4x"></i></a>
                     </li>
                 </ul>
 
