--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -331,6 +331,7 @@ btn-circle-dark:hover,
     margin-bottom: 0;
     padding-top: 80px;
     padding-bottom: 80px;
+    margin-top: 150px;
 
     input, textarea, select {
         border:4px solid #bbbbbb;
