--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -77,6 +77,7 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+                    <li><a href="{{site.production_url}}">Articles</a></li>
                     {% assign pages_list = site.pages %}
                     {% assign group = 'navigation' %}
                     {% include JB/pages_list %}
@@ -144,14 +145,14 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
 
-                <ul class="list-inline banner-social-buttons">
-                    <li><a href="https://twitter.com/{{site.author.twitter}}" class="" title="Twitter"><i class="fa fa-twitter fa-fw fa-4x"></i></a>
+                <ul class="list-inline list-unstyled banner-social-buttons">
+                    <li><a href="https://twitter.com/{{site.author.twitter}}" class="" title="Twitter"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                     </li>
-                    <li><a href="http://github.com/{{site.author.github}}" class="" title="Github"><i class="fa fa-github fa-fw fa-4x"></i></a>
+                    <li><a href="http://github.com/{{site.author.github}}" class="" title="Github"><i class="fa fa-github fa-fw fa-3x"></i></a>
                     </li>
-                    <li><a href="https://plus.google.com/+{{site.author.googleplus}}/posts" class="" title="Google+"><i class="fa fa-google-plus fa-fw fa-4x"></i></a>
+                    <li><a href="https://plus.google.com/+{{site.author.googleplus}}/posts" class="" title="Google+"><i class="fa fa-google-plus fa-fw fa-3x"></i></a>
                     </li>
-                    <li><a href="au.linkedin.com/in/{{site.author.linkedin}}" class="" title="LinkedIn"><i class="fa fa-linkedin fa-fw fa-4x"></i></a>
+                    <li><a href="au.linkedin.com/in/{{site.author.linkedin}}" class="" title="LinkedIn"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
                     </li>
                 </ul>
 
