--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -43,12 +43,11 @@
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="/assets/css/all.css">
+    <link rel="stylesheet" href="assets/css/all.css">
     <!-- endinject -->
 
     <!-- Progress meter - Remove if video load times are acceptable -->
-    <link rel="stylesheet" href="/assets/vendor/pace/themes/pace-theme-minimal.css">
-    <script src="/assets/vendor/pace/pace.js"></script>
+    <script src="/assets/vendor/pace/pace.min.js"></script>
 
     <!-- Modernizr -->
     <script src="/assets/modernizr/modernizr.min.js"></script>
@@ -175,7 +174,7 @@
 
     <!-- Custom Theme JavaScript -->
     <!-- inject:js -->
-    <script src="/assets/js/all.js"></script>
+    <script src="assets/js/all.min-ac6c7aa0.js"></script>
     <!-- endinject -->
 
     <!-- Include analytics -->
