Styled Categories and Tag pages
enabled pigments for highlighting

--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -43,7 +43,7 @@
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="assets/css/all.css">
+    <link rel="stylesheet" href="/assets/css/all.css">
     <!-- endinject -->
 
     <!-- Progress meter - Remove if video load times are acceptable -->
@@ -75,6 +75,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li><a href="{{site.production_url}}">Articles</a></li>
+
                     {% assign pages_list = site.pages %}
                     {% assign group = 'navigation' %}
                     {% include JB/pages_list %}
@@ -174,7 +175,7 @@
 
     <!-- Custom Theme JavaScript -->
     <!-- inject:js -->
-    <script src="assets/js/all.min-ac6c7aa0.js"></script>
+    <script src="/assets/js/all.min-ac6c7aa0.js"></script>
     <!-- endinject -->
 
     <!-- Include analytics -->
