--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -369,7 +369,7 @@ btn-circle-dark:hover,
 
 .btn {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: $fontsans;
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
