--- a/_includes/themes/grayscale/post.html
+++ b/_includes/themes/grayscale/post.html
@@ -8,7 +8,7 @@
   {% endunless %}
   <div class="post-date">
     {% unless page.tags == empty %}
-    <ul class="tag_box list-inline pull-right hidden-xs hidden-sm">
+    <ul class="tag-box list-inline pull-right hidden-xs hidden-sm">
       {% assign tags_list = page.tags %}
       {% assign nobadges = true %}
       {% include JB/tags_list %}
