articles and bug fixing

--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -29,6 +29,12 @@ p {
     font-size: 18px;
     line-height: 1.5;
 }
+
+blockquote {
+    font-style: italic;
+    color: lighten($darkgreytext,40);
+}
+
 .has-error {
     .form-control {
         border-color: darken($errortext,8);
