--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -23,23 +23,30 @@
 
     <link rel="alternate" type="application/rss+xml" title="{{site.author.name}}: {{site.feed_description}} » Feed" href="{{site.production_url}}{{site.xJB.rss_path}}" />
 
-
     <!-- Social  -->
-    <!-- Hmm do I want on all -->
+    <!-- Facebook open graph -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Thoughts on Google Instant" />
-    <meta property="og:url" content="http://www.mattcutts.com/blog/thoughts-on-google-instant/" />
-    <meta property="og:description" content="The blogosphere is absorbing today's announcement of Google Instant. I wanted to give some context and some thoughts. Google's web search (and web search infrastructure) team tries to do several th..." />
-    <meta property="article:published_time" content="2010-09-08T20:09:00+00:00" />
-    <meta property="article:modified_time" content="2010-09-08T20:09:00+00:00" />
-    <meta property="article:author" content="http://www.mattcutts.com/blog/author/admin/" />
-    <meta property="og:site_name" content="Matt Cutts: Gadgets, Google, and SEO" />
-    <meta property="og:image" content="http://wordpress.com/i/blank.jpg" />
-    <meta name="twitter:site" content="@jetpack" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="og:title" content="{% unless page.title == null %}{{ page.title }}{% endunless %}" />
+    <meta property="og:url" content="{{ site.production_url }}{{ page.url }}" />
+    <meta property="og:description" content="{% unless page.description == null %}{{ page.description }}{% endunless %}" />
+    {% unless page.date == null %}
+    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
+    <meta property="article:modified_time" content="{{ page.date | date_to_xmlschema }}" />
+    {% else %}
+    <!-- Last generated date -->
+    <meta property="article:published_time" content="{{ site.time | date_to_xmlschema }}" />
+    <meta property="article:modified_time" content="{{ site.time | date_to_xmlschema }}" />
+    {% endunless %}
+    <meta property="article:author" content="{{ site.production_url }}/about/" />
+    <meta property="og:site_name" content="{{ site.name }}" />
+    <!-- <meta property="og:image" content="http://wordpress.com/i/blank.jpg" /> -->
 
-    <!-- <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> -->
+    <!-- Twitter card -->
+    <meta name="twitter:site" content="@{{ site.author.twitter }}" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{% unless page.description == null %}{{ page.description }}{% endunless %}" />
+
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     <!-- inject:css -->
@@ -159,7 +166,7 @@
         </div>
     </section>
 
-
+{% comment %}
     <!-- <div id="map"></div> -->
 
     <!-- Core JavaScript Files -->
@@ -172,10 +179,11 @@
 
     <!-- Google Maps API Key - You will need to use your own API key to use the map feature -->
     <!-- // <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script> -->
+{% endcomment %}
 
     <!-- Custom Theme JavaScript -->
     <!-- inject:js -->
-    <script src="/assets/js/all.min-088b5324.js"></script>
+    <script src="/assets/js/all.min-217d3738.js"></script>
     <!-- endinject -->
 
     <!-- Include analytics -->
