--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -7,6 +7,7 @@ $fontserif : Merriweather,"Baskerville","Calibri",serif;
 // Colors
 $darkgreytext: #111;
 $lightgreytext: #ccc;
+// $lightgreentext: #28c3ab;
 $lightgreentext: #28c3ab;
 $lightgreentext_rgba: rgba(40,195,171,.2);
 $errortext: #c32836;
