image compression throwing error
commented out until have time to look into

--- a/_includes/themes/grayscale/default.html
+++ b/_includes/themes/grayscale/default.html
@@ -50,7 +50,7 @@
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="/assets/css/all-50e2abf0.css">
+    <link rel="stylesheet" href="/assets/css/all.css">
     <!-- endinject -->
 
     <!-- Progress meter - Remove if video load times are acceptable -->
